--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-   <section id="main-screen" class="bg-dark vh-100 text-center">
-        <div>
+
+   <section id="main-screen" class="bg-dark vh-100">
+        <div class="text-center">
             <h2 class="text-light">Coding Quiz</h2>
             <button id="start-button" class="btn btn-primary">Start Quiz</button>
         </div>
    </section>
 
    <section id="question-screen" class="hide">
-        <div class="row">
+        <div class="card row border border-warning">
             <div class="card-body text-center">
                 <h2 id="question-box" class="card-title"></h2>
                 <h3><span id="player-time"></span></h3>
@@ -29,20 +30,22 @@
         </div>
    </section>
 
-   <section id="player-name" class="hide">
-        <form>
-            <div class="input-group">
-                <label for="first-name">First Name</label>
-                <input type="text" name="player-name" id="player-name" placeholder="Jane"/>
-            </div>
-            <button type="submit" id="save" class="btn btn-primary">Submit</button>
-        </form>
+   <section id="player-name-section" class="hide text-center">
         <div>
-            <ul>
-                <li id="hs-player-name"></li>
+            <h2>Times Up!</h2>
+            <p id="hs-player-name"></p>
+            <ul id="high-scores">
             </ul>
         </div>
-   </section>
+        <form class="text-center">
+            <div>
+                <label for="first-name">Input Your Name</label>
+                <input type="text" name="player-name" id="player-name" placeholder=""/>
+            </div>
+            <button id="save" class="btn btn-primary">Submit Score</button>
+            <button type="submit" id="restart" class="btn btn-warning">Restart Quiz</button>
+        </form>
+    </section>
 
    <script src="./assets/script.js"></script>
 </body>
