Added last changes and comments

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-
+    
+    <!-- Home Screen to start quiz -->
    <section id="main-screen" class="bg-dark vh-100">
         <div class="text-center">
             <h2 class="text-light">Coding Quiz</h2>
@@ -17,6 +18,7 @@
         </div>
    </section>
 
+   <!-- Hidden Quiz section that will be shown when user clicks the start button  -->
    <section id="question-screen" class="hide">
         <div class="card row border border-warning">
             <div class="card-body text-center">
@@ -30,6 +32,7 @@
         </div>
    </section>
 
+   <!-- Hidden end-screen section that will be shown when user completes the quiz  -->
    <section id="player-name-section" class="hide text-center">
         <div>
             <h2>Times Up!</h2>
